None

Bugs fixed in 3.29.1
====================
[3556730] In Add/Edit dialog, clicking Apply no longer disables the OK
button. An asterisk (*) is displayed in the title bar when the entry's
modified and Apply's not clicked upon. Thanks to shivak7 for the fix.
[3539347] An empty diamond icon is now updated to a full one when an
entry is dragged into it. Thanks to nsaipraveen for the fix.

New Features for 3.29
=====================
[3519484] Empty Groups are now persistent (previously a group with no
entries would 'disappear' if the database was locked or closed).
[3510481] The Last Modified and Password Modified date/times are
initially set to show the entry's creation time, instead of being blank.
[] When comparing databases, you can now display of the details of the
entries' differences in the results dialog by right-click -> compare
selected entries.
[] You can now cancel a long running Compare, Merge or Synchronize
database operation. Note: You should check the operation's report file
to see if the operation was indeed cancelled. If not, you can undo it
as all operations).
[] Portuguese (Brazil) installation instructions added, thanks to Andreas.

Changes to Existing Features in 3.29
====================================
None

Bugs fixed in 3.29
==================
[3525995] Find now only highlights/select the found entry.
[3523117] Password Expiration Date now correctly set when using intervals.
[3521158] Paste into the Notes field (Add or Edit entry) is now always
in plain text.
[3518734] When generating passwords (Ctrl-P), the user is no longer
prompted to save changes when pressing Esc if they have selected a
Named Password Policy but not generated a password.
[3518732] Custom special symbol set now handled correctly in Generate
Password dialog box.
[3518389] All date/time fields in the List view are now displayed
using the user's "short date" format as specified via the Windows
Control Panel "Region and Language" tab.