@@ -92,6 +92,11 @@ modified and Apply's not clicked upon. Thanks to shivak7 for the fix.
 entry is dragged into it. Thanks to nsaipraveen for the fix.
 </td>
 </tr>
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3537861);return false;">3537861</a></td>
+<td>An off-by-one issue with expiration dates has been fixed by
+suthakar123.</td>
+</tr>
 </tbody>
 </table>
 <br>
